--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Run gherkin-syntaxed specs with cypress.io",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run"
+    "test": "eslint . && cypress run"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,10 @@
     "cypress": "^2.0.1",
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-cypress": "^2.0.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "prettier": "^1.10.2"
   }
 }
