--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "cypress-cucumber-preprocessor",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0",
   "description": "Run gherkin-syntaxed specs with cypress.io",
   "main": "index.js",
   "scripts": {
-    "test": "eslint . && cypress run"
+    "test": "eslint . && cypress run",
+    "fixStyle": "eslint . --fix"
   },
   "repository": {
     "type": "git",
