--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "debug": "^3.0.1",
     "gherkin": "^5.0.0",
     "glob": "^7.1.2",
-    "through": "^2.3.8"
+    "through": "^2.3.8",
+    "chai": "^4.1.2"
   },
   "devDependencies": {
     "cypress": "^2.0.1",
@@ -42,5 +43,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "jest": "^22.4.2",
     "prettier": "^1.10.2"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/setupTestFramework.js"
   }
 }
