added when, then, given globals added jest command to npm test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Run gherkin-syntaxed specs with cypress.io",
   "main": "index.js",
   "scripts": {
-    "test": "eslint . && cypress run",
+    "test": "eslint . && jest && cypress run",
     "fixStyle": "eslint . --fix"
   },
   "repository": {
