--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@cypress/browserify-preprocessor": "^1.0.2",
     "chai": "^4.1.2",
+    "cosmiconfig": "^4.0.0",
     "cucumber": "^4.0.0",
     "cucumber-expressions": "^5.0.7",
     "debug": "^3.0.1",
