--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-cucumber-preprocessor",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Run gherkin-syntaxed specs with cypress.io",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
   "dependencies": {
     "@cypress/browserify-preprocessor": "^1.0.3",
     "chai": "^4.1.2",
+    "chokidar": "^2.0.4",
     "cosmiconfig": "^4.0.0",
     "cucumber": "^4.2.1",
     "cucumber-expressions": "^6.0.1",
