chore: added semantic release (#118)

--- a/circle.yml
+++ b/circle.yml
@@ -17,3 +17,6 @@ jobs:
       - run:
           name: run tests
           command: npm test
+      - run:
+          name: release
+          command: npm run semantic-release || true
