feat: Scenario outline and data tables (#142)
* Providing failing test for Scenario Outlines in conjunction with data-tables

* Test is green

* Define function earlier

* Replacing Object.spread with Object.assign. Cypress Tests seem to fail on that.

* changed variablename

* Replaced with earlier version

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "eslint . && jest && cypress run",
+    "test:debug": "jest && DEBUG=cypress:* cypress open\n",
     "fixStyle": "eslint . --fix",
     "semantic-release": "semantic-release"
   },
