test: stop using the deprecated jest option for set up

--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "semantic-release": "^15.12.3"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>/lib/testHelpers/setupTestFramework.js"
+    "setupFilesAfterEnv": [
+      "<rootDir>/lib/testHelpers/setupTestFramework.js"
+    ]
   },
   "config": {
     "commitizen": {
