Test on example repos (#232)
* build: run the branch version of the preprocessor against the example repo

* feat: bump cypress to the newest version

* ci: run typescript webpack example on CI

* ci(circle.yml): fix wrong circle.yml syntax

--- a/circle.yml
+++ b/circle.yml
@@ -21,5 +21,11 @@ jobs:
           name: slow test run, for sanity
           command: npm run test:each
       - run:
+          name: Run on cypress-cucumber-example
+          command: bash ./.scripts/runOnExample.bash
+      - run:
+          name: Run on cypress-cucumber-webpack-typescript-example
+          command: bash ./.scripts/runOnWebpackTypescriptExample.bash
+      - run:
           name: release
           command: npm run semantic-release || true
