feature (get-cypress-config): allow check if cypress were run using --config-file option and use the configured path for get cypress config

--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "gherkin": "^5.1.0",
     "glob": "^7.1.2",
     "js-string-escape": "^1.0.1",
+    "minimist": "^1.2.0",
+    "ps-node": "^0.1.6",
     "through": "^2.3.8"
   },
   "devDependencies": {
