chore (tests): adding tests for stepDefinitionPath file

--- a/package.json
+++ b/package.json
@@ -77,6 +77,14 @@
   "jest": {
     "setupFilesAfterEnv": [
       "<rootDir>/lib/testHelpers/setupTestFramework.js"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "lib/**/*.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "node_modules",
+      "<rootDir>/lib/*.test.js"
     ]
   },
   "config": {
