chore(lint) improve eslint config + readme

--- a/.npmignore
+++ b/.npmignore
@@ -63,3 +63,5 @@ typings/
 #### NPM IGNORE SPECIFICS
 cypress/
 cypress.json
+cypress-cucumber-webpack-typescript-example/
+cypress-cucumber-example/
