--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/glob": "^7.1.3",
-    "cypress": "^3.4.0",
+    "cypress": "^5.5.0",
     "mocha": "^8.2.0",
     "stream-buffers": "^3.0.2",
     "strip-indent": "^3.0.0",
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
-    "cypress": "^3.0.0"
+    "cypress": "^4.0.0 || ^5.0.0"
   }
 }
