Attempt to type window.testState properly

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cypress-preprocessor"
   ],
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib/**/*.js",
     "lib/**/*.d.ts",
