--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "target": "ES2017",
     "module": "CommonJS",
     "types": ["cypress"],
-    "lib": ["ES2019"]
+    "lib": ["dom", "ES2019"]
   },
   "include": [
     "lib/**/*.ts",
