--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -7,6 +7,6 @@
     "resolveJsonModule": true,
     "target": "ES2017",
     "module": "CommonJS",
-    "lib": ["ES2019"]
+    "lib": ["dom", "ES2019"]
   }
 }
