Re-implement Cypress' way of resolving specs
This will further help us to implement `cypress-tags` correctly.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "cosmiconfig": "^4.0.0",
     "debug": "^4.2.0",
     "glob": "^7.1.6",
-    "is-path-inside": "^3.0.2"
+    "is-path-inside": "^3.0.2",
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
