Add a `cypress-tags` executable
This as implemented as a shell script, where we can properly exec and
omit any signal handling (which I don't want to figure out how / if node
does when using child_process.execFileSync, although they might do it
entirely correct).

I've tested it locally, but am too lazy to implement proper integration
tests of this atm.

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "files": [
     "lib/**/*.js",
     "lib/**/*.d.ts",
+    "cypress-tags",
     "methods.js",
     "methods.d.ts",
     "specs-by-tags.js",
     "specs-by-tags.d.ts"
   ],
   "bin": {
+    "cypress-tags": "cypress-tags.sh",
     "specs-by-tags": "specs-by-tags.js"
   },
   "scripts": {
