--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
+    "fmt": "prettier --ignore-path .gitignore --write '**/*.ts'",
+    "test": "npm run test:fmt && npm run test:types && npm run test:unit && npm run test:integration",
+    "test:fmt": "prettier --ignore-path .gitignore --check '**/*.ts'",
     "test:types": "dtslint --expectOnly types",
     "test:unit": "mocha",
     "test:integration": "cucumber-js",
-    "prepublishOnly": "npm run build && npm run test:types && npm run test:unit && npm run test:integration"
+    "prepublishOnly": "npm run build && npm run test"
   },
   "dependencies": {
     "@cucumber/cucumber": "^7.0.0-rc.0",
@@ -48,6 +51,7 @@
     "cypress": "^5.5.0",
     "dtslint": "^4.0.5",
     "mocha": "^8.2.0",
+    "prettier": "^2.2.1",
     "stream-buffers": "^3.0.2",
     "strip-indent": "^3.0.0",
     "typescript": "^4.0.3"
