--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "specs-by-tags": "specs-by-tags.js"
   },
   "scripts": {
+    "postinstall": "patch-package",
     "build": "tsc",
     "watch": "tsc --watch",
     "fmt": "prettier --ignore-path .gitignore --write '**/*.ts'",
@@ -53,11 +54,14 @@
     "minimatch": "^3.0.4"
   },
   "devDependencies": {
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.0.2",
     "@types/debug": "^4.1.5",
     "@types/glob": "^7.1.3",
     "cypress": "^5.5.0",
     "dtslint": "^4.0.5",
+    "esbuild": "^0.11.12",
     "mocha": "^8.2.0",
+    "patch-package": "^6.4.7",
     "prettier": "^2.2.1",
     "stream-buffers": "^3.0.2",
     "strip-indent": "^3.0.0",
