--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.0",
     "@types/debug": "^4.1.5",
     "@types/glob": "^7.1.3",
-    "cypress": "^5.5.0",
+    "cypress": "^4.0.0 || ^5.0.0",
     "dtslint": "^4.0.5",
     "esbuild": "^0.11.12",
     "mocha": "^8.2.0",
