--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.0",
+    "@cucumber/pretty-formatter": "^1.0.0-alpha.0",
     "@types/debug": "^4.1.5",
     "@types/glob": "^7.1.3",
     "cypress": "^4.0.0 || ^5.0.0",
