--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@cucumber/pretty-formatter": "^1.0.0-alpha.0",
     "@types/debug": "^4.1.5",
     "@types/glob": "^7.1.3",
-    "cypress": "^4.0.0 || ^5.0.0",
+    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
     "dtslint": "^4.0.5",
     "esbuild": "^0.11.12",
     "mocha": "^8.2.0",
@@ -67,6 +67,6 @@
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
-    "cypress": "^4.0.0 || ^5.0.0"
+    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
   }
 }
