Correct an entry in package.json `files`
This is horrible stuff and right now I have little control of what
actually gets packages and pushed to the registry.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "files": [
     "lib/**/*.js",
     "lib/**/*.d.ts",
-    "cypress-tags",
+    "cypress-tags.sh",
     "methods.js",
     "methods.d.ts",
     "specs-by-tags.js",
