Add a esbuild loader plugin
Making it easier to consume when using esbuild.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "lib/**/*.ts",
     "specs-by-tags.ts",
     "methods.ts",
-    "declarations.d.ts"
+    "declarations.d.ts",
+    "esbuild.ts"
   ]
 }
