--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "lib/**/*.js",
     "lib/**/*.d.ts",
     "cypress-tags.sh",
+    "esbuild.js",
+    "esbuild.d.ts",
     "methods.js",
     "methods.d.ts",
     "specs-by-tags.js",
@@ -67,6 +69,12 @@
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
-    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
+    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
+    "esbuild": "^0.11.12"
+  },
+  "peerDependenciesMeta": {
+    "esbuild": {
+      "optional": true
+    }
   }
 }
