Fix and test support for webpack + browserify
Support for browserify was broken since 3292cf5 [1] and it turns out
that webpack has never really been supported. Async loaders for webpack
shouldn't return promises, but rather invoke a callback [2].

[1] https://github.com/badeball/cypress-cucumber-preprocessor/commit/3292cf5
[2] https://v4.webpack.js.org/api/loaders/#asynchronous-loaders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "specs-by-tags.ts",
     "methods.ts",
     "declarations.d.ts",
-    "esbuild.ts"
+    "browserify.ts",
+    "esbuild.ts",
+    "webpack.ts"
   ]
 }
