--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
   "files": [
     "lib/**/*.js",
     "lib/**/*.d.ts",
+    "browserify.js",
+    "browserify.d.ts",
     "cypress-tags.sh",
     "esbuild.js",
     "esbuild.d.ts",
     "methods.js",
     "methods.d.ts",
     "specs-by-tags.js",
-    "specs-by-tags.d.ts"
+    "specs-by-tags.d.ts",
+    "webpack.js",
+    "webpack.d.ts"
   ],
   "bin": {
     "cypress-tags": "cypress-tags.sh",
@@ -47,7 +51,6 @@
     "@cucumber/gherkin": "^15.0.2",
     "@cucumber/messages": "^13.1.0",
     "@cucumber/tag-expressions": "^2.0.4",
-    "@cypress/browserify-preprocessor": "^3.0.1",
     "cosmiconfig": "^7.0.0",
     "debug": "^4.2.0",
     "glob": "^7.1.6",
@@ -57,6 +60,8 @@
   "devDependencies": {
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.0",
     "@cucumber/pretty-formatter": "^1.0.0-alpha.0",
+    "@cypress/browserify-preprocessor": "3.0.1",
+    "@cypress/webpack-preprocessor": "*",
     "@types/debug": "^4.1.5",
     "@types/glob": "^7.1.3",
     "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
@@ -66,13 +71,23 @@
     "prettier": "^2.2.1",
     "stream-buffers": "^3.0.2",
     "strip-indent": "^3.0.0",
-    "typescript": "^4.0.3"
+    "ts-loader": "^8.2.0",
+    "typescript": "^4.0.3",
+    "webpack": "^4.46.0"
   },
   "peerDependencies": {
+    "@cypress/browserify-preprocessor": "^3.0.1",
+    "@cypress/webpack-preprocessor": "^5.7.0",
     "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
     "esbuild": "^0.11.12"
   },
   "peerDependenciesMeta": {
+    "@cypress/browserify-preprocessor": {
+      "optional": true
+    },
+    "@cypress/webpack-preprocessor": {
+      "optional": true
+    },
     "esbuild": {
       "optional": true
     }
