--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@cypress/webpack-preprocessor": "*",
     "@types/debug": "^4.1.5",
     "@types/glob": "^7.1.3",
-    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
+    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
     "dtslint": "^4.0.5",
     "esbuild": "^0.11.12",
     "mocha": "^8.2.0",
@@ -77,7 +77,7 @@
   },
   "peerDependencies": {
     "@cypress/browserify-preprocessor": "^3.0.1",
-    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
+    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
     "esbuild": "^0.11.12"
   },
   "peerDependenciesMeta": {
