Use @badeball/cypress-configuration
.. contrary to local implementation. This package will drive several
other, so it makes sense to extract it.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prepublishOnly": "npm run build && npm run test"
   },
   "dependencies": {
+    "@badeball/cypress-configuration": "^1.0.0",
     "@cucumber/cucumber": "^7.0.0-rc.0",
     "@cucumber/cucumber-expressions": "^10.3.0",
     "@cucumber/gherkin": "^15.0.2",
