--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@cypress/webpack-preprocessor": "*",
     "@types/debug": "^4.1.5",
     "@types/glob": "^7.1.3",
+    "@types/stream-buffers": "^3.0.4",
     "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
     "dtslint": "^4.0.5",
     "esbuild": "^0.11.12",
@@ -73,6 +74,7 @@
     "stream-buffers": "^3.0.2",
     "strip-indent": "^3.0.0",
     "ts-loader": "^8.2.0",
+    "ts-node": "^10.2.1",
     "typescript": "^4.0.3",
     "webpack": "^4.46.0"
   },
