--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,12 @@
     "resolveJsonModule": true,
     "target": "ES2017",
     "module": "CommonJS",
-    "types": ["cypress"],
+    "types": ["node", "cypress"],
     "lib": ["dom", "ES2019"]
   },
   "include": [
     "lib/**/*.ts",
+    "test/**/*.ts",
     "specs-by-tags.ts",
     "methods.ts",
     "declarations.d.ts",
