--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@types/debug": "^4.1.7",
     "@types/glob": "^7.2.0",
     "@types/stream-buffers": "^3.0.4",
-    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
+    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
     "dtslint": "^4.2.1",
     "esbuild": "^0.14.23",
     "mocha": "^9.2.1",
@@ -81,7 +81,7 @@
   },
   "peerDependencies": {
     "@cypress/browserify-preprocessor": "^3.0.1",
-    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
+    "cypress": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
     "esbuild": "^0.14.23"
   },
   "peerDependenciesMeta": {
