--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,3 +59,25 @@ jobs:
         run: npm run test
       - name: Version
         run: npx cypress --version
+
+  windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Dependencies
+        shell: bash
+        env:
+          CUCUMBER_JSON_FORMATTER_URL: https://github.com/cucumber/common/releases/download/json-formatter%2Fgo%2Fv19.0.0/cucumber-json-formatter-windows-amd64
+        run: |
+          npm install
+          curl -L $CUCUMBER_JSON_FORMATTER_URL > cucumber-json-formatter.exe
+          chmod +x ./cucumber-json-formatter.exe
+          echo $GITHUB_WORKSPACE >> $GITHUB_PATH
+      - name: Build
+        run: npm run build
+      # https://github.com/webpack/webpack/issues/12759
+      - name: Remove Webpack test
+        run: rm features/loaders/webpack.feature
+      - name: Test
+        run: npm run test:integration
