Add attach(), similar to that from cucumber-js

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@cucumber/gherkin": "^15.0.2",
     "@cucumber/messages": "^13.2.1",
     "@cucumber/tag-expressions": "^4.1.0",
+    "base64-js": "^1.5.1",
     "cosmiconfig": "^7.0.1",
     "debug": "^4.2.0",
     "glob": "^7.2.0",
