--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@cucumber/messages": "^13.2.1",
     "@cucumber/tag-expressions": "^4.1.0",
     "base64-js": "^1.5.1",
+    "chalk": "^4.1.2",
     "cosmiconfig": "^7.0.1",
     "debug": "^4.2.0",
     "glob": "^7.2.0",
