--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "dtslint": "^4.2.1",
     "esbuild": "^0.14.23",
     "mocha": "^9.2.1",
+    "pngjs": "^6.0.0",
     "prettier": "^2.5.1",
     "stream-buffers": "^3.0.2",
     "strip-indent": "^3.0.0",
