Add support for Cypress v10
Co-authored-by: Anthony Champagne <anthony.champagne@wiztivi.com>

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "prepublishOnly": "npm run clean && npm run build && npm run test"
   },
   "dependencies": {
-    "@badeball/cypress-configuration": "^2.1.0",
+    "@badeball/cypress-configuration": "^3.0.0",
     "@cucumber/cucumber-expressions": "^15.0.1",
     "@cucumber/gherkin": "^15.0.2",
     "@cucumber/messages": "^13.2.1",
@@ -62,14 +62,19 @@
     "@cypress/browserify-preprocessor": "^3.0.2",
     "@cypress/webpack-preprocessor": "^5.11.1",
     "@types/debug": "^4.1.7",
+    "@types/fs-extra": "^9.0.13",
     "@types/glob": "^7.2.0",
+    "@types/prettier": "^2.6.3",
     "@types/stream-buffers": "^3.0.4",
-    "cypress": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
+    "ast-types": "^0.15.2",
+    "cypress": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
     "dtslint": "^4.2.1",
     "esbuild": "^0.14.23",
+    "fs-extra": "^10.1.0",
     "mocha": "^9.2.1",
     "pngjs": "^6.0.0",
     "prettier": "^2.5.1",
+    "recast": "^0.21.1",
     "stream-buffers": "^3.0.2",
     "strip-indent": "^3.0.0",
     "ts-loader": "^9.2.6",
@@ -79,7 +84,7 @@
   },
   "peerDependencies": {
     "@cypress/browserify-preprocessor": "^3.0.1",
-    "cypress": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
+    "cypress": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
     "esbuild": "^0.14.23"
   },
   "peerDependenciesMeta": {
