--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@types/prettier": "^2.6.3",
     "@types/stream-buffers": "^3.0.4",
     "ast-types": "^0.15.2",
-    "cypress": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "cypress": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
     "dtslint": "^4.2.1",
     "esbuild": "^0.14.23",
     "fs-extra": "^10.1.0",
@@ -84,7 +84,7 @@
   },
   "peerDependencies": {
     "@cypress/browserify-preprocessor": "^3.0.1",
-    "cypress": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "cypress": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
     "esbuild": "^0.14.23"
   },
   "peerDependenciesMeta": {
